k8s/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: lost-and-found
  labels:
   app: lost-and-found
