k8s/service.yml
kind: Service
apiVersion: v1
metadata:
 name: lost-and-found-service 
 namespace: lost-and-found
spec:
  selector:
    app: lost-and-found
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
