k8s/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lostfound-route
  namespace: lost-and-found
spec:
  parentRefs:
    - name: lostfound-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: lost-and-found-service
          port: 8000
